// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchListField > renders correctly 1`] = `
<div data-v-4d322540="" class="vd-search-list">
  <div data-v-4d322540="" class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-locale--is-ltr v-text-field">
    <!---->
    <div class="v-input__control">
      <div class="v-field v-field--appended v-field--center-affix v-field--prepended v-field--variant-outlined v-theme--light v-locale--is-ltr">
        <div class="v-field__overlay"></div>
        <div class="v-field__loader">
          <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
            <!---->
            <div class="v-progress-linear__background bg-primary" style="width: 100%;"></div>
            <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
              <div class="v-progress-linear__indeterminate">
                <div class="v-progress-linear__indeterminate long bg-primary"></div>
                <div class="v-progress-linear__indeterminate short bg-primary"></div>
              </div>
            </transition-stub>
            <!---->
          </div>
        </div>
        <div class="v-field__prepend-inner">
          <!----><i data-v-4d322540="" class="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z mdi v-icon notranslate v-theme--light v-icon--size-default mr-1" aria-hidden="true"></i>
        </div>
        <div class="v-field__field" data-no-activator="">
          <!----><label class="v-label v-field-label" for="input-0">
            <!---->Rechercher
          </label>
          <!----><input size="1" type="text" id="input-0" aria-describedby="input-0-messages" class="v-field__input">
          <!---->
        </div>
        <transition-stub name="expand-x-transition" appear="false" persisted="false" css="true">
          <div class="v-field__clearable" style="display: none;"><i class="mdi-close-circle mdi v-icon notranslate v-theme--light v-icon--size-default v-icon--clickable" role="button" aria-hidden="false" tabindex="0" aria-label="Clear Rechercher"></i></div>
        </transition-stub>
        <div class="v-field__append-inner">
          <!---->
          <!---->
        </div>
        <div class="v-field__outline">
          <div class="v-field__outline__start"></div>
          <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-0">
              <!---->Rechercher
            </label></div>
          <div class="v-field__outline__end"></div>
          <!---->
        </div>
      </div>
    </div>
    <!---->
    <!---->
  </div>
  <div data-v-4d322540="" class="v-list v-theme--light v-list--density-default v-list--one-line pb-0" tabindex="0" role="listbox">
    <div data-v-4d322540="" class="v-list-item v-list-item--active v-list-item--link text-primary v-theme--light v-list-item--density-default v-list-item--one-line v-list-item--variant-text d-flex align-center justify-start" tabindex="-2"><span class="v-list-item__overlay"></span><span class="v-list-item__underlay"></span>
      <div class="v-list-item__prepend">
        <div data-v-4d322540="" class="v-list-item-action v-list-item-action--start">
          <div data-v-4d322540="" class="v-selection-control v-selection-control--dirty v-selection-control--density-default v-checkbox-btn">
            <div class="v-selection-control__wrapper">
              <!---->
              <div class="v-selection-control__input"><i class="mdi-checkbox-marked mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i><input id="input-3" aria-disabled="false" type="checkbox" value="true"></div>
            </div><label class="v-label v-label--clickable" for="input-3">
              <!----><span data-v-4d322540="" class="d-sr-only">Sélectionner la valeur</span>
            </label>
          </div>
        </div>
        <div data-v-4d322540="" class="v-list-item-title">Item 1</div>
        <div class="v-list-item__spacer"></div>
      </div>
      <div class="v-list-item__content" data-no-activator="">
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <div data-v-4d322540="" class="v-list-item v-list-item--link v-theme--light v-list-item--density-default v-list-item--one-line v-list-item--variant-text d-flex align-center justify-start" tabindex="-2"><span class="v-list-item__overlay"></span><span class="v-list-item__underlay"></span>
      <div class="v-list-item__prepend">
        <div data-v-4d322540="" class="v-list-item-action v-list-item-action--start">
          <div data-v-4d322540="" class="v-selection-control v-selection-control--density-default v-checkbox-btn">
            <div class="v-selection-control__wrapper">
              <!---->
              <div class="v-selection-control__input"><i class="mdi-checkbox-blank-outline mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i><input id="input-5" aria-disabled="false" type="checkbox" value="true"></div>
            </div><label class="v-label v-label--clickable" for="input-5">
              <!----><span data-v-4d322540="" class="d-sr-only">Sélectionner la valeur</span>
            </label>
          </div>
        </div>
        <div data-v-4d322540="" class="v-list-item-title">Item 2</div>
        <div class="v-list-item__spacer"></div>
      </div>
      <div class="v-list-item__content" data-no-activator="">
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`SearchListField > renders correctly with empty item prop 1`] = `
<div data-v-4d322540="" class="vd-search-list">
  <div data-v-4d322540="" class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-locale--is-ltr v-text-field">
    <!---->
    <div class="v-input__control">
      <div class="v-field v-field--appended v-field--center-affix v-field--prepended v-field--variant-outlined v-theme--light v-locale--is-ltr">
        <div class="v-field__overlay"></div>
        <div class="v-field__loader">
          <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px; left: 50%; transform: translateX(-50%);" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
            <!---->
            <div class="v-progress-linear__background bg-primary" style="width: 100%;"></div>
            <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
              <div class="v-progress-linear__indeterminate">
                <div class="v-progress-linear__indeterminate long bg-primary"></div>
                <div class="v-progress-linear__indeterminate short bg-primary"></div>
              </div>
            </transition-stub>
            <!---->
          </div>
        </div>
        <div class="v-field__prepend-inner">
          <!----><i data-v-4d322540="" class="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z mdi v-icon notranslate v-theme--light v-icon--size-default mr-1" aria-hidden="true"></i>
        </div>
        <div class="v-field__field" data-no-activator="">
          <!----><label class="v-label v-field-label" for="input-0">
            <!---->Rechercher
          </label>
          <!----><input size="1" type="text" id="input-0" aria-describedby="input-0-messages" class="v-field__input">
          <!---->
        </div>
        <transition-stub name="expand-x-transition" appear="false" persisted="false" css="true">
          <div class="v-field__clearable" style="display: none;"><i class="mdi-close-circle mdi v-icon notranslate v-theme--light v-icon--size-default v-icon--clickable" role="button" aria-hidden="false" tabindex="0" aria-label="Clear Rechercher"></i></div>
        </transition-stub>
        <div class="v-field__append-inner">
          <!---->
          <!---->
        </div>
        <div class="v-field__outline">
          <div class="v-field__outline__start"></div>
          <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-0">
              <!---->Rechercher
            </label></div>
          <div class="v-field__outline__end"></div>
          <!---->
        </div>
      </div>
    </div>
    <!---->
    <!---->
  </div>
  <div data-v-4d322540="" class="v-list v-theme--light v-list--density-default v-list--one-line pb-0" tabindex="0" role="listbox"></div>
</div>
`;
